# flash-attention

./: .gitignore  _tmp_test.py  build.sh  setup.py  setup_bkup.py  setup_combined.py
benchmarks/: benchmark_causal.py  benchmark_flash_attention.py
csrc/flash_attn/: .gitignore  CMakeLists.txt  build.sh  flash_api.cpp  fmha_api.cpp  l2attn_demo.py  test_l2attn_op.py  verify_dQ.py  verify_l2attn_bwd.py
csrc/flash_attn/src/: block_info.h  flash.h  flash_bwd_kernel.h  flash_bwd_launch_template.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  fmha.h  fmha_block_dgrad_kernel_1xN_loop.h  fmha_bwd_hdim64.cu  fmha_bwd_launch_template.h  fmha_dgrad_kernel_1xN_loop.h  fmha_fprop_kernel_1xN.h  fmha_fwd_launch_template.h  gemm_q_k.h  l2attn_bwd_hdim128.cu  l2attn_bwd_hdim32.cu  l2attn_bwd_hdim64.cu  l2attn_bwd_launch_template.h  l2attn_dgrad_kernel_1xN_loop.h  l2attn_fprop_kernel_1xN.h  l2attn_fwd_hdim128.cu  l2attn_fwd_hdim32.cu  l2attn_fwd_hdim64.cu  l2attn_fwd_launch_template.h  l2dist_dq_dk.h  l2dist_q_k.h  softmax.h  static_switch.h
csrc/flash_attn/src/fmha/: gemm.h  gmem_tile.h  kernel_traits.h  smem_tile.h  softmax.h  utils.h
flash_attn/: flash_attention.py  flash_attn_interface.py  flash_blocksparse_attn_interface.py  l2_attention.py
flash_attn/models/: vit.py
flash_attn/modules/: embedding.py
flash_attn/ops/: fused_dense.py
flash_attn/ops/triton/: linear.py
flash_attn_1/: flash_blocksparse_attention.py
flash_attn_1/layers/: patch_embed.py
flash_attn_1/models/: bert.py  gpt.py
flash_attn_1/modules/: block.py  mha.py  mlp.py
flash_attn_1/ops/triton/: mlp.py
patches/: d30f2e1c.patch
tests/: _glm_mask_test.py  test_flash_attn.py  test_l2attn.py  test_rotary.py
tests/losses/: test_cross_entropy.py  test_cross_entropy_parallel.py
tests/models/: test_bert.py  test_gpt.py  test_gpt_generation.py  test_gpt_parallel.py
tests/modules/: test_block_parallel.py  test_embedding_parallel.py  test_mha_parallel.py
tests/ops/: test_dropout_layer_norm.py  test_fused_dense.py  test_fused_dense_parallel.py
training/: README.md
